i fixed the center alignment

--- a/styles.css
+++ b/styles.css
@@ -196,6 +196,9 @@ body{
         margin-bottom: 0;
         padding: 3.5rem;
     }
+    html{
+        height: 100%;
+    }
     body{
         height: 100%;
         width: 100%;
